Manifests/services/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"grafana-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"nginx-server","http":{"paths":[{"backend":{"service":{"name":"prometheus-grafana","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2024-12-11T14:58:38Z"
  generation: 15
  name: grafana-ingress
  namespace: default
  resourceVersion: "786978"
  uid: a8c168b3-7f8e-462c-ac09-31acbd242872
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.hdo3.local
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.96.58.162
